Use fdatasync() or fsync() for syncing
sync() results in abysmal performance under load and does more syncing
than we need; fsync()ing the things we actually care about only
decreases benchmarked throughput by ~40% and still provides the same
per-message data integrity guarantees.

--- a/simta.conf
+++ b/simta.conf
@@ -290,6 +290,11 @@
 #
 #REVERSE_URL			URL
 
+# Enabling SYNC will provide stronger protection against data loss at the
+# cost of some performance.
+# Default is OFF.
+#SYNC   [ ON | OFF ]
+
 # If this flag is set, extra logging is done for debugging purposes.
 # 0 is no additional logging
 # 1 is some additional logging
