Reformat Makefile.in assignment of INCPATH and LIBS
Splitting it into single lines makes rebasing much easier

--- a/Makefile.in
+++ b/Makefile.in
@@ -47,10 +47,28 @@ SIMCKOBJ=	simck.o md.o
 CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
-INCPATH=	-I. @CPPFLAGS@ @DENSER_CFLAGS@ @JEMALLOC_CFLAGS@ @SNET_CFLAGS@ @YASL_CFLAGS@ @LIBSSL_CFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CFLAGS@${SRCPFX_INCPATH}
+INCPATH  =	-I.
+INCPATH +=	@CPPFLAGS@
+INCPATH +=	@DENSER_CFLAGS@
+INCPATH +=	@JEMALLOC_CFLAGS@
+INCPATH +=	@SNET_CFLAGS@
+INCPATH +=	@YASL_CFLAGS@
+INCPATH +=	@LDAP_CPPFLAGS@
+INCPATH +=	@LIBSASL_CFLAGS@
+INCPATH +=	@LIBSSL_CFLAGS@
+INCPATH +=	@LIBWRAP_CPPFLAGS@
+INCPATH +=	${SRCPFX_INCPATH}
 DEFS=		-g -DLIBEXECDIR=\"$(LIBEXECDIR)\" @DEFS@
-LIBPATH=	@LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@
-LIBS=		@DENSER_LIBS@ @JEMALLOC_LIBS@ @SNET_LIBS@ @LIBSSL_LIBS@ @LIBSASL_LIBS@ @YASL_LIBS@ @LIBS@ @EXTRALIBS@
+LIBPATH	=	@LDFLAGS@
+LIBPATH += 	@LDAP_LDFLAGS@
+LIBPATH +=	@LIBWRAP_LDFLAGS@
+LIBS +=		@DENSER_LIBS@
+LIBS +=		@JEMALLOC_LIBS@
+LIBS +=		@SNET_LIBS@
+LIBS +=		@YASL_LIBS@
+LIBS +=		@LIBSASL_LIBS@
+LIBS +=		@LIBSSL_LIBS@
+LIBS +=		@EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
