Implement DKIM signing

--- a/simta.conf
+++ b/simta.conf
@@ -266,6 +266,32 @@
 #
 #DKIM_VERIFY ON
 
+# DKIM_SIGN <OFF|ALWAYS|LOCAL|BOUNCES>
+#
+# Controls when messages have a DKIM signature added.
+#
+# OFF           Do not sign messages
+# ALWAYS        Sign all messages
+# LOCAL         Sign locally generated mail, including bounces
+# BOUNCES       Only sign bounce messages
+#
+#DKIM_SIGN OFF
+
+# DKIM_DOMAIN <hostname>
+#
+# Domain to use when generating DKIM signatures. Defaults to MASQUERADE,
+# which defaults to the hostname.
+
+# DKIM_SELECTOR <selector>
+#
+# Selector to use when generating DKIM signatures.
+#
+#DKIM_SELECTOR simta
+
+# DKIM_KEY <path>
+#
+# Path to a file containing the private key to use for DKIM signing.
+
 # DMARC <ON|OFF|STRICT>
 #
 # Controls Domain-based Message Authentication, Reporting &
