Generate Authentication-Results header

--- a/simta.conf
+++ b/simta.conf
@@ -311,6 +311,13 @@
 # attempt to determine the Organizational Domain and will return
 # inaccurate results for subdomains.
 
+# AUTHN_RESULTS <ON|OFF>
+#
+# Controls whether an RFC 7001 Authentication-Results header is added
+# to the message.
+#
+#AUTHN_RESULTS ON
+
 # MAX_RECEIVED_HEADERS <max>
 #
 # Maximum number of Received: headers on incoming mail. If a piece of mail
