Add RECEIVE_QUEUE_STRATEGY PUNT

--- a/simta.conf
+++ b/simta.conf
@@ -378,12 +378,13 @@
 #
 #AGGRESSIVE_RECEIPT 50
 
-# RECEIVE_QUEUE_STRATEGY <FAST|SLOW|JAIL>
+# RECEIVE_QUEUE_STRATEGY <FAST|SLOW|PUNT|JAIL>
 #
 # Determines the default disposition of received mail.
 #
 # FAST          The Receive child will attempt initial delivery
 # SLOW          Skip the initial delivery attempt
+# PUNT          Skip the initial delivery attempt and punt
 # JAIL          Instead of delivering it, jail incoming mail
 #
 #RECEIVE_QUEUE_STRATEGY FAST
