Add PROXY Protocol support
http://www.haproxy.org/download/1.6/doc/proxy-protocol.txt

--- a/simta.conf
+++ b/simta.conf
@@ -90,6 +90,19 @@
 #CONNECTION_LIMIT_PER_HOST 0
 #CONNECTION_THROTTLE_PER_HOST 0
 
+# PROXY <ON|OFF>
+#
+# Whether to expect inbound connections to be using the PROXY protocol.
+#
+#PROXY OFF
+
+# PROXY_TIMEOUT <seconds>
+#
+# Number of seconds to wait for the PROXY header before aborting
+# the connection.
+#
+#PROXY_TIMEOUT 10
+
 # LIBWRAP_URL <url>
 #
 # URL to return when rejecting connections due to tcpwrappers
