Increase resolution of BITBUCKET
1 second is a long time to to wait, 0 seconds isn't long enough.

--- a/simta.conf
+++ b/simta.conf
@@ -704,10 +704,10 @@
 #EXPAND_INTERVAL 60
 #JAIL_CLEANUP_INTERVAL 14400
 
-# BITBUCKET <seconds>
+# BITBUCKET <milliseconds>
 #
 # This will completely disable mail delivery; instead, a delivery
-# attempt will wait the specified number of seconds and then return
+# attempt will wait the specified number of milliseconds and then return
 # success. You do not want to enable this on a production system.
 #
 #BITBUCKET 0
