Add support for sub-addressing
E.g. mapping foo+bar@example.com -> foo@example.com.

--- a/simta.conf
+++ b/simta.conf
@@ -463,6 +463,13 @@
 #
 #AGGRESSIVE_EXPANSION ON
 
+# SUBADDRESS_SEPARATOR <char>
+#
+# If set, some expansion types will canonicalize email addresses during
+# expansion by stripping off the separator and anything after it. E.g.
+# if this is set to '+' the address 'junk+foo@example.com' will be treated
+# as an alias for 'junk@example.com'. There is no default separator.
+
 # AGGRESSIVE_DELIVERY <ON|OFF>
 #
 # During delivery, retry MX entries that accepted at least one
