Switch to systemd for RHEL

--- a/packaging/rpm/simta.spec.in
+++ b/packaging/rpm/simta.spec.in
@@ -27,6 +27,8 @@ BuildRequires: pkgconfig(denser)
 #BuildRequires: pkgconfig(jemalloc)
 BuildRequires: jemalloc-devel
 BuildRequires: pkgconfig(libsnet)
+%{?systemd_requires}
+BuildRequires: systemd
 %if "%{with_tls}" == "yes"
 BuildRequires: pkgconfig(openssl)
 %endif
@@ -46,7 +48,6 @@ Requires(pre): shadow-utils
 Requires(preun): %{_sbindir}/alternatives chkconfig
 Requires(post): %{_sbindir}/alternatives chkconfig coreutils
 Requires(postun): %{_sbindir}/alternatives coreutils
-Requires: initscripts
 Requires: procmail
 Requires: setup
 
@@ -85,9 +86,9 @@ make %{?_smp_mflags}
 %install
 rm -rf %{buildroot}
 make DESTDIR=%{buildroot} INSTALL_OPTS='' install
-install -m 755 -d %{buildroot}%{_sysconfdir} %{buildroot}%{_initrddir}
+install -m 755 -d %{buildroot}%{_sysconfdir} %{buildroot}%{_unitdir}
 install -p -m 644 simta.conf %{buildroot}%{_sysconfdir}/simta.conf
-install -p -m 755 packaging/rpm/simta.init %{buildroot}%{_initrddir}/simta
+install -p -m 755 packaging/rpm/simta.service %{buildroot}%{_unitdir}/simta.service
 touch %{buildroot}%{_sysconfdir}/aliases.db
 
 # rename files for alternative usage
@@ -105,8 +106,8 @@ getent passwd simta >/dev/null || \
 exit 0
 
 %postun
+%systemd_postun_with_restart simta
 if [ "$1" -ge "1" ]; then
-	%{_initrddir}/simta condrestart >/dev/null 2>&1
 	mta=`readlink %{_sysconfdir}/alternatives/mta`
 	if [ "$mta" == "%{_sbindir}/sendmail.simta" ]; then
 		%{_sbindir}/alternatives --set mta %{_sbindir}/sendmail.simta
@@ -120,7 +121,6 @@ exit 0
 %{_sbindir}/alternatives --install %{_sbindir}/sendmail mta %{_sbindir}/sendmail.simta 90 \
 	--slave %{_bindir}/newaliases mta-newaliases %{_bindir}/simalias \
 	--slave /usr/lib/sendmail mta-sendmail /usr/lib/sendmail.simta \
-	--initscript simta
 
 # Rebuild maps
 {
@@ -130,8 +130,8 @@ exit 0
 exit 0
 
 %preun
+%systemd_preun simta.service
 if [ $1 = 0 ]; then
-	%{_initrddir}/simta stop >/dev/null 2>&1
 	/sbin/chkconfig --del simta
 	%{_sbindir}/alternatives --remove mta %{_sbindir}/sendmail.simta
 fi
@@ -166,7 +166,7 @@ exit 0
 %attr(0755,simta,mail) %dir %{spooldir}/simta/local
 %attr(0755,simta,mail) %dir %{spooldir}/simta/slow
 
-%{_initrddir}/simta
+%{_unitdir}/simta.service
 %config(noreplace) %{_sysconfdir}/simta.conf
 %attr(0644,simta,mail) %config(noreplace) %{_sysconfdir}/aliases.db
 
