Improve RFC 5782 compliance
Reference the RFC in comments instead of text from the (now defunct)
Open Relay Database website.

Use "dnsl" and "DNS list" instead of RBL. RBL, despite common usage,
refers to a specific commercial list. (It's also weird to call an
accept list an RBL, as we have been doing.) As mentioned in the RFC a
better generic form is DNSxL (e.g. DNSBL -> "DNS block list").

In addition to the A record used by ORDB and other early lists, it's now
common to have a corresponding TXT record with a "reason" for the
listing. Add support for retrieving and using this record in SMTP
responses and logging.

Replace hard-coded independent config/extern variables with named
chains, which greatly simplifies config processing and makes it easier
to add additional lookup chains in the future. The old config directives
are still accepted for now, but should be considered deprecated.

--- a/simta.conf
+++ b/simta.conf
@@ -53,20 +53,17 @@
 #IPV4 ON
 #IPV6 OFF
 
-# RBL_ACCEPT <dns zone>
-# RBL_BLOCK <dns zone> <url>
-# RBL_LOG_ONLY <dns zone>
-# RBL_TRUST <dns zone>
+# DNS_LIST <chain> <BLOCK|ACCEPT|TRUST|LOG_ONLY> <dns zone> [default reason]
 #
-# Adds a DNSBL rule for connecting IPs. If an address is found in a
-# BLOCK list, it is blocked and <url> is returned in the SMTP error
-# message. If it is found in an ACCEPT list, it will be accepted
-# and no further lookups will take place. If it is found in a TRUST
-# list, it will be ACCEPTed and exempted from some checks, such as
-# MAX_FAILED_RCPTS. If it is found on a LOG_ONLY list and verbose
-# logging is enabled, it will log that it was found but continue
-# checking for a BLOCK or ACCEPT. Order in the config file determines
-# lookup precedence.
+# Adds a DNSxL rule to a chain. The 'connect' chain is used during
+# initial connection, the 'user' chain is used for RCPT to users
+# with extra DNSxLs enabled (usually via an LDAP attribute), and the
+# 'authz' chain is used for authorization of authenticated users.
+#
+# Directive ordering in the config file determines lookup order. Being
+# found on a list will terminate processing of that DNSxL chain unless
+# it's a LOG_ONLY list. TRUST is the same as ACCEPT but exempts the
+# connection from checks like MAX_FAILED_RCPTS.
 
 # CONNECTION_LIMIT <max>
 # CONNECTION_THROTTLE <max>
@@ -198,12 +195,6 @@
 #
 #AUTHZ_DEFAULT ALLOW
 
-# AUTHZ_DNS <ALLOW|DENY> <dns zone>
-#
-# Adds a DNSBL authorization rule. simta will query identity.zone and
-# ALLOW or DENY the identity if the record exists. Order in the config
-# file determines lookup precedence.
-
 # SENDER_CHECKING <ON|OFF>
 #
 # Verify that a domain name exists before accepting mail from an address
@@ -217,14 +208,6 @@
 # punish the client. 0 is unlimited.
 #
 #MAX_FAILED_RCPTS 0
-
-# USER_RBL_ACCEPT <dns zone>
-# USER_RBL_BLOCK <dns zone> <url>
-# USER_RBL_LOG_ONLY <dns zone>
-# USER_RBL_TRUST <dns zone>
-#
-# Add a user DNSBL. These are only applied if the user has enabled RBLs in
-# their LDAP entry.
 
 # SRS <OFF|ALWAYS|FOREIGN|SMART>
 #
@@ -401,7 +384,7 @@
 
 # FILTER_TRUSTED <ON|OFF>
 #
-# Determines whether mail from clients on an RBL_TRUST list will be
+# Determines whether mail from clients found on a TRUST DNS list will be
 # run through the CONTENT_FILTER.
 #
 #FILTER_TRUSTED ON
