Change TLS cipher config logic
TLS_CIPHERS overriding defaults for both directions turns out to
rarely be the behaviour we want, so we've always ended up explicitly
setting DELIVER_TLS_CIPHERS back to the default. This change removes
that necessity.

--- a/simta.conf
+++ b/simta.conf
@@ -482,8 +482,7 @@
 
 # DELIVER_TLS_CIPHERS <cipher string>
 #
-# Set a custom cipher string for outbound TLS connections only. If left unset,
-# an explicitly set TLS_CIPHERS will apply to both inbound and outbound.
+# Set a custom cipher string for outbound TLS connections.
 #
 #DELIVER_TLS_CIPHERS EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:!MD5
 
