Add Authenticated Received Chain (ARC) support
Requires libopenarc, which is still in alpha but seems to mostly work.

Successfully validates ARC chains and adds ARC signature sets in
interoperation with itself and Google.

--- a/Makefile.in
+++ b/Makefile.in
@@ -64,6 +64,7 @@ INCPATH +=	@LIBSASL_CFLAGS@
 INCPATH +=	@LIBSSL_CFLAGS@
 INCPATH +=	@LIBWRAP_CPPFLAGS@
 INCPATH +=	@OPENDKIM_CFLAGS@
+INCPATH +=	@OPENARC_CFLAGS@
 INCPATH +=	${SRCPFX_INCPATH}
 DEFS=		-g -DLIBEXECDIR=\"$(LIBEXECDIR)\" @DEFS@
 LIBPATH	=	@LDFLAGS@
@@ -77,6 +78,7 @@ LIBS +=		@LIBIDN_LIBS@
 LIBS +=		@LIBSASL_LIBS@
 LIBS +=		@LIBSSL_LIBS@
 LIBS +=		@OPENDKIM_LIBS@
+LIBS +=		@OPENARC_LIBS@
 LIBS +=		@EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
