--- a/simta.conf
+++ b/simta.conf
@@ -313,12 +313,36 @@
 # attempt to determine the Organizational Domain and will return
 # inaccurate results for subdomains.
 
+# ARC <ON|OFF>
+#
+# Controls Authenticated Received Chain validation.
+#
+#ARC ON
+
+# ARC_DOMAIN
+#
+# Domain to use when generating ARC signatures. Defaults to DKIM_DOMAIN.
+
+# ARC_SELECTOR <selector>
+#
+# Selector to use when generating ARC signatures.
+
+# ARC_KEY <path>
+#
+# Path to a file containing the private key to use for ARC signing.
+
 # AUTHN_RESULTS <ON|OFF>
 #
 # Controls whether an RFC 7001 Authentication-Results header is added
-# to the message.
+# to the message. If ARC is enabled, an ARC header set (including
+# ARC-Authentication-Results) will be added instead.
 #
 #AUTHN_RESULTS ON
+
+# AUTHN_RESULTS_DOMAIN <domain>
+#
+# ADMD for the authentication results. Defaults to MASQUERADE, which defaults
+# to the hostname.
 
 # MAX_RECEIVED_HEADERS <max>
 #
