--- a/simta.conf
+++ b/simta.conf
@@ -188,6 +188,12 @@
 #
 #AUTHN OFF
 
+# SASL_DOMAIN <hostname>
+#
+# Domain to use for SASL authentication. By default this is unset, and
+# this determination is left to the SASL library's internal configuration
+# and defaults.
+
 # AUTHZ_DEFAULT <ALLOW|DENY>
 #
 # Determines the default authorization result for successfully
