--- a/packaging/rpm/simta.spec.in
+++ b/packaging/rpm/simta.spec.in
@@ -18,9 +18,9 @@ URL: http://rsug.itd.umich.edu/software/simta/
 Source0: %{name}-%{version}.tar.xz
 Provides: MTA smtpdaemon server(smtp)
 Provides: %{_sbindir}/sendmail %{_bindir}/newaliases
+BuildRequires: libucl-devel >= 0.8.1
 BuildRequires: lmdb-devel
 BuildRequires: tcp_wrappers-devel
-BuildRequires: procmail
 BuildRequires: setup
 BuildRequires: pkgconfig(denser)
 #BuildRequires: pkgconfig(jemalloc)
@@ -50,7 +50,6 @@ Requires(pre): shadow-utils
 Requires(preun): %{_sbindir}/alternatives chkconfig
 Requires(post): %{_sbindir}/alternatives chkconfig coreutils
 Requires(postun): %{_sbindir}/alternatives coreutils
-Requires: procmail
 Requires: setup
 
 %description
