Change SYNC default to ON

--- a/simta.conf
+++ b/simta.conf
@@ -687,10 +687,10 @@
 
 # SYNC <ON|OFF>
 #
-# Enabling SYNC will provide stronger protection against data loss at
+# SYNC provides stronger protection against data loss at
 # the cost of some performance.
 #
-#SYNC OFF
+#SYNC ON
 
 # DNS_AUTO_CONFIG <ON|OFF>
 #
