Rework SECONDARY_MX configuration
It doesn't need to be tied to the R rules for a domain, and it's clearer
logic to do a direct lookup instead of using a secondary linked list
with no deduplication.

Old:
@ctools.umich.edu R SECONDARY_MX ctools-mx.itd.umich.edu

New:
@ctools.umich.edu R ACCEPT
@ctools-mx.itd.umich.edu D SECONDARY_MX

--- a/simta.conf
+++ b/simta.conf
@@ -618,11 +618,6 @@
 # Accept mail for valid SRS addresses using SRS_SECRET or
 # an alternate secret.
 
-# @<domain> R SECONDARY_MX <secondary MX name>
-#
-# Act as a store-and-forward backup MX. Accept mail for any recipient
-# and suppress delivery to MXs at or below our own precedence level.
-
 # @<domain> D MAILER DEFAULT
 # @<domain> D MAILER <arg> [arg ...]
 #
@@ -643,6 +638,13 @@
 # @<domain> D PUNTING <ENABLED|DISABLED>
 #
 # Control whether messages are eligible to be punted.
+
+# @<domain> D SECONDARY_MX
+#
+# Allows simta to act as a store-and-forward backup MX. If this domain
+# is found as an MX during resolution delivery to higher-priority
+# entries will occur as normal, but it and any equal-or-lower-priority
+# MXen will be suppressed.
 
 # Timeouts
 #
