--- a/simta.conf
+++ b/simta.conf
@@ -208,6 +208,13 @@
 #
 #SENDER_CHECKING ON
 
+# MAX_FAILED_SENDERS <max>
+#
+# Set the maximum number of failed MAIL commands. If this limit is reached,
+# punish the client. 0 is unlimited.
+#
+#MAX_FAILED_SENDERS 0
+
 # MAX_FAILED_RCPTS <max>
 #
 # Set the maximum number of failed RCPT commands. If this limit is reached,
