Update to libidn2, do IDNA conversion during DNS lookup

--- a/Makefile.in
+++ b/Makefile.in
@@ -59,7 +59,7 @@ INCPATH +=	@JEMALLOC_CFLAGS@
 INCPATH +=	@SNET_CFLAGS@
 INCPATH +=	@YASL_CFLAGS@
 INCPATH +=	@LDAP_CPPFLAGS@
-INCPATH +=	@LIBIDN_CFLAGS@
+INCPATH +=	@LIBIDN2_CFLAGS@
 INCPATH +=	@LIBSASL_CFLAGS@
 INCPATH +=	@LIBSSL_CFLAGS@
 INCPATH +=	@LIBWRAP_CPPFLAGS@
@@ -74,7 +74,7 @@ LIBS +=		@DENSER_LIBS@
 LIBS +=		@JEMALLOC_LIBS@
 LIBS +=		@SNET_LIBS@
 LIBS +=		@YASL_LIBS@
-LIBS +=		@LIBIDN_LIBS@
+LIBS +=		@LIBIDN2_LIBS@
 LIBS +=		@LIBSASL_LIBS@
 LIBS +=		@LIBSSL_LIBS@
 LIBS +=		@OPENDKIM_LIBS@
