Add missing filter environment documentation

--- a/simta.conf
+++ b/simta.conf
@@ -397,7 +397,12 @@
 # SIMTA_BODY_CHECKSUM_SIZE      number of bytes that were checksummed
 # SIMTA_BAD_HEADERS             result of cursory header validity check
 # SIMTA_SPF_RESULT              result of SPF check
+# SIMTA_SPF_DOMAIN              domain used in SPF check
 # SIMTA_DMARC_RESULT            result of DMARC check
+# SIMTA_DMARC_DOMAIN            domain used in DMARC check
+# SIMTA_DKIM_DOMAINS            space-separated list of domains with a valid
+#                               DKIM signature
+# SIMTA_DNSL_RESULT             result of DNSL processing ('BLOCK', 'ACCEPT', etc.)
 #
 # The first line of text returned from the content filter will be
 # logged and displayed to the SMTP client.
