--- a/simta.conf
+++ b/simta.conf
@@ -449,13 +449,14 @@
 #
 #AGGRESSIVE_RECEIPT 50
 
-# RECEIVE_QUEUE_STRATEGY <FAST|SLOW|PUNT|JAIL>
+# RECEIVE_QUEUE_STRATEGY <FAST|SLOW|JAIL>
 #
 # Determines the default disposition of received mail.
 #
 # FAST          The Receive child will attempt initial delivery
 # SLOW          Skip the initial delivery attempt
-# PUNT          Skip the initial delivery attempt and punt
+# PUNT          Skip the initial delivery attempt and punt (deprecated in favor
+#               of PUNT_STRATEGY ALL)
 # JAIL          Instead of delivering it, jail incoming mail
 #
 #RECEIVE_QUEUE_STRATEGY FAST
@@ -553,7 +554,14 @@
 
 # PUNT <hostname>
 #
-# Punt undeliverable mail to the specified host.
+# Punt mail to the specified host.
+
+# PUNT_STRATEGY <NORMAL|ALL>
+#
+# Determines the strategy for punting messages.
+#
+# NORMAL        The host will attempt message delivery normally before punting
+# ALL           Messages are delivered to the punt host immediately
 
 # JAIL <hostname>
 #
