Rename source files to match output binaries

--- a/Makefile.am
+++ b/Makefile.am
@@ -96,13 +96,13 @@ simda_SOURCES = simda.c
 simda_LDADD = $(COMMON_LIBS)
 simdmarc_SOURCES = simdmarc.c dmarc.c dmarc.h $(COMMON_FILES)
 simdmarc_LDADD = $(COMMON_LIBS)
-simexpander_SOURCES = expander.c $(COMMON_FILES)
+simexpander_SOURCES = simexpander.c $(COMMON_FILES)
 simexpander_LDADD = $(COMMON_LIBS)
 simrbl_SOURCES = simrbl.c $(COMMON_FILES)
 simrbl_LDADD = $(COMMON_LIBS)
 simreverse_SOURCES = simreverse.c $(COMMON_FILES)
 simreverse_LDADD = $(COMMON_LIBS)
-simsendmail_SOURCES = simsend.c $(COMMON_FILES)
+simsendmail_SOURCES = simsendmail.c $(COMMON_FILES)
 simsendmail_LDADD = $(COMMON_LIBS)
 simspf_SOURCES = simspf.c $(COMMON_FILES)
 simspf_LDADD = $(COMMON_LIBS)
