Fix default RED rules and refactor postmaster handling

--- a/simta.conf
+++ b/simta.conf
@@ -365,7 +365,6 @@ defaults {
                 ciphers = "EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:!MD5";
             }
         }
-
     }
 
     red_rule {
@@ -411,6 +410,16 @@ defaults {
             }
         }
     }
+}
+
+# Default rules for localhost if there is no explicit config
+domain "localhost.DEFAULT" {
+        rule {
+          type = alias;
+        }
+        rule {
+          type = password;
+        }
 }
 
 #domain "example.com" {
