work on submission

--- a/simta.conf
+++ b/simta.conf
@@ -125,9 +125,9 @@ receive {
     }
 
     smtp {
-        # <MSA|MTA|MTA_STRICT>
+        # <MSA|MTA|STRICT>
         # MSA mode will attempt to add missing headers to submitted messages.
-        # MTA_STRICT will reject mail that fails RFC compliance checks.
+        # STRICT will reject mail that fails RFC compliance checks.
         mode = mta;
 
         # In tempfail mode, commands will wait this long before returning
