--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,18 @@
 *.la
 *.lo
 *.o
+*.xz
 *~
 ,*
 .cproject
+.deps
 .gdbinit
 .libs
 .project
 .settings/
 Makefile
 Makefile.bak
+Makefile.in
 VERSION
 aclocal.m4
 autom4te.cache
@@ -22,11 +25,15 @@ config.status
 config.sub
 configure
 denser/dense
+depcomp
 dist
 errors
+genimbed
+install-sh
 lib*.a
 libtool
-ltmain.sh
+ltmain.s
+missing
 packaging/rpm/simta.spec
 q_runner
 simalias
